@@ -1,3 +1,9 @@
+[B]v0.0.6[/B]
+Fixed next-page system again.
+Site-featured streams.
+Additional fixes for some of the sometimes-missing varaible(s) before playback starts.
+Hardcoded Dev's Featured List returns for some.
+
 [B]v0.0.5[/B]
 ...
 
